more on steric ssh

--- a/notebooks/steric-ssh/Steric-SSH.ipynb
+++ b/notebooks/steric-ssh/Steric-SSH.ipynb
@@ -29,7 +29,7 @@
        "    <div style=\"width: 24px; height: 24px; background-color: #e1e1e1; border: 3px solid #9D9D9D; border-radius: 5px; position: absolute;\"> </div>\n",
        "    <div style=\"margin-left: 48px;\">\n",
        "        <h3 style=\"margin-bottom: 0px;\">Client</h3>\n",
-       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Client-1f97db86-1f4f-11ed-99ae-00000763fe80</p>\n",
+       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Client-a509883e-2299-11ed-bdaf-00000769fe80</p>\n",
        "        <table style=\"width: 100%; text-align: left;\">\n",
        "\n",
        "        <tr>\n",
@@ -42,7 +42,7 @@
        "        \n",
        "            <tr>\n",
        "                <td style=\"text-align: left;\">\n",
-       "                    <strong>Dashboard: </strong> <a href=\"/proxy/8787/status\" target=\"_blank\">/proxy/8787/status</a>\n",
+       "                    <strong>Dashboard: </strong> <a href=\"/proxy/33737/status\" target=\"_blank\">/proxy/33737/status</a>\n",
        "                </td>\n",
        "                <td style=\"text-align: left;\"></td>\n",
        "            </tr>\n",
@@ -58,11 +58,11 @@
        "    </div>\n",
        "    <div style=\"margin-left: 48px;\">\n",
        "        <h3 style=\"margin-bottom: 0px; margin-top: 0px;\">LocalCluster</h3>\n",
-       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">d0831c13</p>\n",
+       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">b2d022e0</p>\n",
        "        <table style=\"width: 100%; text-align: left;\">\n",
        "            <tr>\n",
        "                <td style=\"text-align: left;\">\n",
-       "                    <strong>Dashboard:</strong> <a href=\"/proxy/8787/status\" target=\"_blank\">/proxy/8787/status</a>\n",
+       "                    <strong>Dashboard:</strong> <a href=\"/proxy/33737/status\" target=\"_blank\">/proxy/33737/status</a>\n",
        "                </td>\n",
        "                <td style=\"text-align: left;\">\n",
        "                    <strong>Workers:</strong> 4\n",
@@ -95,11 +95,11 @@
        "        <div style=\"width: 24px; height: 24px; background-color: #FFF7E5; border: 3px solid #FF6132; border-radius: 5px; position: absolute;\"> </div>\n",
        "        <div style=\"margin-left: 48px;\">\n",
        "            <h3 style=\"margin-bottom: 0px;\">Scheduler</h3>\n",
-       "            <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Scheduler-cb43317b-8bbe-4974-ac64-e7a041f91c08</p>\n",
+       "            <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Scheduler-9be1e08b-9e34-407d-9c32-7190a77ebae9</p>\n",
        "            <table style=\"width: 100%; text-align: left;\">\n",
        "                <tr>\n",
        "                    <td style=\"text-align: left;\">\n",
-       "                        <strong>Comm:</strong> tcp://127.0.0.1:45201\n",
+       "                        <strong>Comm:</strong> tcp://127.0.0.1:41243\n",
        "                    </td>\n",
        "                    <td style=\"text-align: left;\">\n",
        "                        <strong>Workers:</strong> 4\n",
@@ -107,7 +107,7 @@
        "                </tr>\n",
        "                <tr>\n",
        "                    <td style=\"text-align: left;\">\n",
-       "                        <strong>Dashboard:</strong> <a href=\"/proxy/8787/status\" target=\"_blank\">/proxy/8787/status</a>\n",
+       "                        <strong>Dashboard:</strong> <a href=\"/proxy/33737/status\" target=\"_blank\">/proxy/33737/status</a>\n",
        "                    </td>\n",
        "                    <td style=\"text-align: left;\">\n",
        "                        <strong>Total threads:</strong> 16\n",
@@ -141,7 +141,7 @@
        "                <table style=\"width: 100%; text-align: left;\">\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Comm: </strong> tcp://127.0.0.1:35197\n",
+       "                            <strong>Comm: </strong> tcp://127.0.0.1:43739\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Total threads: </strong> 4\n",
@@ -149,7 +149,7 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Dashboard: </strong> <a href=\"/proxy/33195/status\" target=\"_blank\">/proxy/33195/status</a>\n",
+       "                            <strong>Dashboard: </strong> <a href=\"/proxy/39231/status\" target=\"_blank\">/proxy/39231/status</a>\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Memory: </strong> 62.50 GiB\n",
@@ -157,13 +157,13 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Nanny: </strong> tcp://127.0.0.1:43107\n",
+       "                            <strong>Nanny: </strong> tcp://127.0.0.1:46861\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\"></td>\n",
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td colspan=\"2\" style=\"text-align: left;\">\n",
-       "                            <strong>Local directory: </strong> /jobfs/55845370.gadi-pbs/dask-worker-space/worker-4e4kueac\n",
+       "                            <strong>Local directory: </strong> /jobfs/56241213.gadi-pbs/dask-worker-space/worker-5ospuno3\n",
        "                        </td>\n",
        "                    </tr>\n",
        "\n",
@@ -186,7 +186,7 @@
        "                <table style=\"width: 100%; text-align: left;\">\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Comm: </strong> tcp://127.0.0.1:36647\n",
+       "                            <strong>Comm: </strong> tcp://127.0.0.1:42255\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Total threads: </strong> 4\n",
@@ -194,7 +194,7 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Dashboard: </strong> <a href=\"/proxy/36503/status\" target=\"_blank\">/proxy/36503/status</a>\n",
+       "                            <strong>Dashboard: </strong> <a href=\"/proxy/46735/status\" target=\"_blank\">/proxy/46735/status</a>\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Memory: </strong> 62.50 GiB\n",
@@ -202,13 +202,13 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Nanny: </strong> tcp://127.0.0.1:45625\n",
+       "                            <strong>Nanny: </strong> tcp://127.0.0.1:46649\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\"></td>\n",
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td colspan=\"2\" style=\"text-align: left;\">\n",
-       "                            <strong>Local directory: </strong> /jobfs/55845370.gadi-pbs/dask-worker-space/worker-8l1yanpi\n",
+       "                            <strong>Local directory: </strong> /jobfs/56241213.gadi-pbs/dask-worker-space/worker-zyorzqw8\n",
        "                        </td>\n",
        "                    </tr>\n",
        "\n",
@@ -231,7 +231,7 @@
        "                <table style=\"width: 100%; text-align: left;\">\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Comm: </strong> tcp://127.0.0.1:35437\n",
+       "                            <strong>Comm: </strong> tcp://127.0.0.1:37357\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Total threads: </strong> 4\n",
@@ -239,7 +239,7 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Dashboard: </strong> <a href=\"/proxy/37215/status\" target=\"_blank\">/proxy/37215/status</a>\n",
+       "                            <strong>Dashboard: </strong> <a href=\"/proxy/40425/status\" target=\"_blank\">/proxy/40425/status</a>\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Memory: </strong> 62.50 GiB\n",
@@ -247,13 +247,13 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Nanny: </strong> tcp://127.0.0.1:44013\n",
+       "                            <strong>Nanny: </strong> tcp://127.0.0.1:42649\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\"></td>\n",
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td colspan=\"2\" style=\"text-align: left;\">\n",
-       "                            <strong>Local directory: </strong> /jobfs/55845370.gadi-pbs/dask-worker-space/worker-fbhse8dt\n",
+       "                            <strong>Local directory: </strong> /jobfs/56241213.gadi-pbs/dask-worker-space/worker-_vyovurd\n",
        "                        </td>\n",
        "                    </tr>\n",
        "\n",
@@ -276,7 +276,7 @@
        "                <table style=\"width: 100%; text-align: left;\">\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Comm: </strong> tcp://127.0.0.1:33253\n",
+       "                            <strong>Comm: </strong> tcp://127.0.0.1:35331\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Total threads: </strong> 4\n",
@@ -284,7 +284,7 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Dashboard: </strong> <a href=\"/proxy/32825/status\" target=\"_blank\">/proxy/32825/status</a>\n",
+       "                            <strong>Dashboard: </strong> <a href=\"/proxy/39823/status\" target=\"_blank\">/proxy/39823/status</a>\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Memory: </strong> 62.50 GiB\n",
@@ -292,13 +292,13 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Nanny: </strong> tcp://127.0.0.1:34871\n",
+       "                            <strong>Nanny: </strong> tcp://127.0.0.1:44161\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\"></td>\n",
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td colspan=\"2\" style=\"text-align: left;\">\n",
-       "                            <strong>Local directory: </strong> /jobfs/55845370.gadi-pbs/dask-worker-space/worker-y53qh_ff\n",
+       "                            <strong>Local directory: </strong> /jobfs/56241213.gadi-pbs/dask-worker-space/worker-6qrcrcg0\n",
        "                        </td>\n",
        "                    </tr>\n",
        "\n",
@@ -325,7 +325,7 @@
        "</div>"
       ],
       "text/plain": [
-       "<Client: 'tcp://127.0.0.1:45201' processes=4 threads=16, memory=250.00 GiB>"
+       "<Client: 'tcp://127.0.0.1:41243' processes=4 threads=16, memory=250.00 GiB>"
       ]
      },
      "execution_count": 1,
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "d83cd85a-8c22-4b2e-9682-3c02c51ebd66",
    "metadata": {},
    "outputs": [],
@@ -695,6 +695,20 @@
     "                                  frequency = '1 monthly', start_time = ti, \n",
     "                                  end_time = tf).sel(time = slice(ti, tf), \n",
     "                                                     yt_ocean = slice(None, -58))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "20f20adf-3cc9-419a-b90a-8770cc338c0a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for k in ['ctrl', 'up', 'down']:\n",
+    "    mass_term = (1/(9.8*1035))*(pbot[k]*1e4)\n",
+    "    mass_term = mass_term.load()\n",
+    "\n",
+    "    mass_term.rename('mass_term').to_netcdf('mass_term_'+k+'.nc')"
    ]
   },
   {
@@ -752,8 +766,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "df25041c-db7b-4b7e-ad48-065751661c4c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "bc3593d8-6fb5-4992-af1a-b1f5c551cb77",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8.342331105151203e-05"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2*2*np.pi/(24*60*60)*np.sin(np.deg2rad(35))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "468a006e-2ca9-4e47-95b8-f3322b748dac",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.00010284451245736957"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2*2*np.pi/(24*60*60)*np.sin(np.deg2rad(45))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "1c38ebee-1335-485c-93d0-918101834067",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.00028040000000000004"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "3.2e-4+8.34e-5-.000123"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "9240116d-993e-48b0-bcf3-ae70db50c930",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.00030040000000000004"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    " 0.0000834+0.00032-0.000103"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5cfff3a-8dc0-436f-ab9d-30ae778a50d9",
    "metadata": {},
    "outputs": [],
    "source": []
